--- a/ProjetSAE24/appsae/templates/appsae/donnee_list.html
+++ b/ProjetSAE24/appsae/templates/appsae/donnee_list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Liste des données du capteur</h1>
-    <h2>Capteur: {{ capteur.nom_capteur }}</h2>
+    <h2>{{ capteur.nom_capteur }}</h2>
 
     <h2>Liste des données</h2>
     <table>
