--- a/ProjetSAE24/appsae/static/appsae/donnee_list.css
+++ b/ProjetSAE24/appsae/static/appsae/donnee_list.css
@@ -12,6 +12,49 @@ h2 {
     margin-left: 25%;  
 }
 
+form {
+    margin-bottom: 20px;
+    margin-left: 20px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+form label {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+form input[type="date"],
+form input[type="time"] {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+form button[type="submit"] {
+    padding: 10px 20px;
+    margin-left: 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+form button[type="submit"]:hover {
+    background-color: #45a049;
+}
+
+
 table {
     width: 50%;
     border-collapse: collapse;
