--- a/ProjetSAE24/appsae/templates/appsae/donnee_list.html
+++ b/ProjetSAE24/appsae/templates/appsae/donnee_list.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <a href="{% url 'capteur_list' %}">
+        <button>Retour à la page d'accueil</button>
+    </a>
 <head>
     <title>Liste des données du capteur</title>
     {% load static %}
