--- a/ProjetSAE24/appsae/static/appsae/capteur_list.css
+++ b/ProjetSAE24/appsae/static/appsae/capteur_list.css
@@ -7,6 +7,12 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    text-align: center;
+    margin-top: 3%;
+    margin-bottom: 1%;
+}
+
 .button-container {
     display: flex;
     flex-wrap: wrap;
@@ -28,5 +34,21 @@ h1 {
 }
 
 .capteur-button:hover {
+    background-color: #45a049;
+}
+
+button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 45%;
+    transition: background-color 0.3s;
+}
+
+button:hover {
     background-color: #45a049;
 }
