--- a/ProjetSAE24/appsae/static/appsae/donnee_list.css
+++ b/ProjetSAE24/appsae/static/appsae/donnee_list.css
@@ -9,7 +9,17 @@ h1 {
 
 h2 {
     margin-top: 20px;
-    margin-left: 25%;  
+    margin-left: 25%;
+}
+
+h3 {
+    margin-top: 10px;
+    margin-left: 1%;
+}
+
+div {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding-bottom: 20px;
 }
 
 form {
@@ -54,17 +64,16 @@ form button[type="submit"]:hover {
     background-color: #45a049;
 }
 
-
 table {
-    width: 50%;
+    width: 80%;
+    margin: 0 auto;
     border-collapse: collapse;
     margin-top: 15px;
-    margin-left: 25%;
 }
 
 table th,
 table td {
-    padding: 5px;
+    padding: 10px;
     text-align: center;
     border: 1px solid #ccc;
 }
@@ -79,4 +88,23 @@ table tr:nth-child(even) {
 
 table tr:hover {
     background-color: #eaeaea;
+}
+
+button {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 1%;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+a {
+    text-decoration: none;
 }
