--- a/ProjetSAE24/appsae/templates/appsae/modifier_capteur.html
+++ b/ProjetSAE24/appsae/templates/appsae/modifier_capteur.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'appsae/donnee_list.css' %}">
     <title>Modifier le capteur</title>
 </head>
 <body>
